defaults to ON.
--
doc/settings: Add documentation for new setting.
include/global.h: Add new field to settings structure.
lib/settings: Add new option no_player_stealing.
server/init.c: In load_settings() recognizes the new option.
server/skills.c: In attempt_steal() prevent stealing from PLAYER if option is
   set.
Andreas Kirschbaum 2006-01-08

server/skills.c: Fix/improve feedback messages for stealing skill.
plugins/cfpython/cfpython.c, server/plugins.c: Just whitespace changes to make
   it conform to programming_guide.
plugins/cfpython/cfpython.c: Make sure context->options always is initialized.
server/main.c: Make code more readable; use snprintf where appropriate.
crossedit/Cnv/CnvPrompt.c: Make file compilable with Ansi C89 compiler.
Andreas Kirschbaum 2006-01-08

Global event Python scripts now are in subdirectories. This makes it easier to
 distribute "Python packages". Modified file:
  plugins/cfpython/cfpython.c
Ryo 2006-01-07

common/{item.c,treasure.c}, server/{apply.c,gods.c,spell_effect.c}: Use named
   constants instead of numbers.
server/monster.c: Use correct field name in move_monster().
Andreas Kirschbaum 2006-01-07

Summon pets less often to the owner on tiled maps.
--
server/pets.c: In remove_all_pets() and pet_move() use on_same_map() to check
   whether the pet is too far away.
Andreas Kirschbaum 2006-01-07

Change meaning of "items are on same map": for tiled maps now two objects are
also considered to be on the same map if they are on diagonally adjacent maps.
This solves the issue that a pet can be only one tile away from the owner but
still considered not to be on the same map.
--
common/map.c: In on_same_map() also consider diagonally adjacent maps.
Andreas Kirschbaum 2006-01-07

Added regions support for plugins. Affected files:
 include/plugin.h sproto.h
 server/plugins.c
--
Added regions to Python plugin. Affected files:
 cfpython/include/cfpython.h cfpython_map_private.h